- Fixed bug #45092 (header HTTP context option not being used with --with-curlwrappers) [DOC] Synced regular and cURL http wrapper "header" option to accept [DOC] either string or array.